Working towards encryption and moving config file

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,7 +5,7 @@ annotation.processing.source.output=${build.generated.sources.dir}/ap-source-out
 application.title=RemoteControl
 application.vendor=willem
 build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
+build.classes.excludes=**/*.form
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
@@ -22,7 +22,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/hMod Plugin.jar
+dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
