--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=RemoteControl
-application.vendor=willem
+application.vendor=14mRh4X0r
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.form
 # This directory is removed when the project is cleaned:
